src/np222kk/dv507/a2/test/cases/negative/test_string_01.ofp
void main() {
    string str = "Hello World!";
    str[1] = 'i';   
}